tdf#136866 VCL don't drop the control background

Since tdf#136094, we handle the background color for native
controls. So we shouldn't set the control window to transparent,
if a control background is set.

I'm not sure, if this just papers over a more general bug, but
even if we report a border in native painting, the original
window shouldn't be painted anyway.

Change-Id: I86267028214586d46ca9ba0b2288d4729abef16f